--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </video>
                 <div class="descripción">
                     <h4>video lyric Getaway Car</h4>
-                    <p>Video de la letra de la canción Getaway Car de Taylor Swift realizado para diseño digital 6.</p>
+                    <p>Video de la letra de la canción Getaway Car de Taylor Swift realizado para diseño digital 6. <a href="https://www.youtube.com/watch?v=SpAilCEB6Wo&ab_channel=CarolinaDiGiovannantonio" target="_blank" rel="noopener noreferrer">Video en mejor calidad</a></p>
                 </div>
             </article>
     </section>
