--- a/index.html
+++ b/index.html
@@ -59,8 +59,11 @@
                     <p>Creación de un libro impreso mediante la serigrafía, basado en la historia de Lewis Carroll, Alicia en el País de las Maravillas. Trabajo realizado junto a Magela García.</p>
                 </div>
             <div class="img-articulos">
+                <!--
                 <img src="img/proyectos editorial/libro-objeto-serigrafía-foto1.png" alt="libro objeto">
                 <img src="img/proyectos editorial/libro-objeto-serigrafía-foto2.png" alt="libro objeto">
+                -->
+                <img src="img/proyectos editorial/GIF-libro-objeto_v01.gif" alt="GIF libro objeto">
             </div>
         </article>
         <!-- revista Galilei -->
